hack to fix spacing around list items per #37

--- a/assets/sass/screen.scss
+++ b/assets/sass/screen.scss
@@ -947,6 +947,7 @@ body.cacap .cacap-widget-content {
 
 	ul {
 		list-style-type: disc;
+		margin-bottom: 10px; 
 	}
 
 	h1 {
